--- a/package.json
+++ b/package.json
@@ -3,38 +3,36 @@
   "version": "0.1.0",
   "homepage": "https://gitname.github.io/react-gh-pages",
   "private": true,
-  
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ansi-html": ">=0.0.8",
     "bootstrap": "^5.3.2",
+    "glob-parent": ">=5.1.2",
+    "immer": ">=9.0.6",
+    "loader-utils": ">=1.4.2",
+    "minimatch": ">=3.0.5",
+    "node-forge": ">=1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^3.0.1",
-    "web-vitals": "^2.1.4",
-    "loader-utils": ">=1.4.2",
+    "serialize-javascript": ">=3.1.0",
     "shell-quote": ">=1.7.3",
-    "immer": ">=9.0.6",
-    "minimatch": ">=3.0.5",
     "terser": ">=4.8.1",
-    "node-forge": ">=1.3.0",
-    "ansi-html": ">=0.0.8",
-    "glob-parent": ">=5.1.2",
-    "serialize-javascript": ">=3.1.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
