--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "thomasfamilyblog-2024-2025",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
@@ -19,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
+    "scripts": "^0.1.0",
     "serialize-javascript": ">=3.1.0",
     "shell-quote": ">=1.7.3",
     "terser": ">=4.8.1",
