fix: add public url for handling github pages hosting

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "thomasfamilyblog-2024-2025",
+  "homepage": "https://jillthomas799.github.io/thomasfamilyblog-2024-2025git/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
