--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
+    "rollup": ">=2.79.2",
     "scripts": "^0.1.0",
     "serialize-javascript": ">=6.0.2",
     "shell-quote": ">=1.8.1",
