--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "loader-utils": ">=3.2.1",
     "minimatch": ">=9.0.3",
     "node-forge": ">=1.3.1",
+    "pug": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -24,6 +25,7 @@
     "scripts": "^0.1.0",
     "serialize-javascript": ">=6.0.2",
     "shell-quote": ">=1.8.1",
+    "styled-components": "^6.1.13",
     "terser": ">=5.29.2",
     "web-vitals": "^3.5.2",
     "webpack-dev-middleware": "^7.1.1"
@@ -55,6 +57,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "sass": "^1.83.0"
   }
 }
