Major clean up and debugging of entire blog and addition updated May 2025 blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,393 @@
 {
     "cSpell.words": [
-        "indexbiobernard"
+        "Achan",
+        "Aelius",
+        "Aesica",
+        "Æthelfrith",
+        "Aidan",
+        "Ainstable",
+        "Albermale",
+        "Alignli",
+        "Alistairbagpipes",
+        "allcloud",
+        "Alnwick",
+        "Ambleside",
+        "Amey",
+        "anenomes",
+        "Annan",
+        "AONB",
+        "aprilfigcaption",
+        "Apsley",
+        "Armadale",
+        "Armathwaite",
+        "Arrol",
+        "Ashby",
+        "Aspley",
+        "Asturia",
+        "Asturian",
+        "Asturum",
+        "aubretia",
+        "augustfigcaption",
+        "Aureliana",
+        "Avanti",
+        "backbutton",
+        "Bamburgh",
+        "Bankshead",
+        "Banna",
+        "Bernicia",
+        "Birdoswald",
+        "Birdowswald",
+        "Bleatarn",
+        "Blencathra",
+        "bodycentre",
+        "bodyleft",
+        "bodyright",
+        "Bonnies",
+        "Bonniescafé",
+        "Bonniesmenu",
+        "Bouch",
+        "Bowness",
+        "Branson",
+        "Brantwood",
+        "Branzino's",
+        "Branzinos",
+        "Bridgend",
+        "brilliantissimum",
+        "Broadford",
+        "Broccolitia",
+        "Brocolitia",
+        "Brough",
+        "Brudge",
+        "Brunton",
+        "Bunniesand",
+        "Buon",
+        "Burges",
+        "Byker",
+        "CADW",
+        "Caerlaverlock",
+        "Camboglanna",
+        "Camino",
+        "caminodesantiago",
+        "caminodesantiagologo",
+        "Caminologo",
+        "Campoglanna",
+        "Caninemenu",
+        "Carleon",
+        "Carrawburgh",
+        "Carrock",
+        "Carvoran",
+        "Castell",
+        "Castlesteads",
+        "catlennie",
+        "Catriona",
+        "Cawfield",
+        "Cawfields",
+        "charityfundraisingthermometer",
+        "Charnock",
+        "Chesters",
+        "Chipchase",
+        "Chollerford",
+        "Clachaig",
+        "Coch",
+        "Coire",
+        "colour",
+        "colourful",
+        "colours",
+        "Compostela",
+        "Coniston",
+        "Coppermines",
+        "Corbridge",
+        "Cornerhouse",
+        "Coruisk",
+        "Cottaged",
+        "Covent",
+        "Craghill",
+        "Craster",
+        "Cyclistaugustheader",
+        "Dacre",
+        "datenews",
+        "deepwater",
+        "defences",
+        "Defra",
+        "Deira",
+        "Derwenthaugh",
+        "Derwentwater",
+        "Disneyworld",
+        "Divock",
+        "Dowbekin's",
+        "Dufton",
+        "Dunstanburgh",
+        "Dunston",
+        "Eamont",
+        "Eand",
+        "earleft",
+        "earright",
+        "Eastrigg",
+        "Edmunds",
+        "Eheader",
+        "Elswick",
+        "ensuite",
+        "Éowyn",
+        "Errington",
+        "Euston",
+        "Eveningd",
+        "eyeleftinner",
+        "eyeleftouter",
+        "eyerightinner",
+        "eyerightouter",
+        "Fairey",
+        "fallingleaves",
+        "Farne",
+        "favourite",
+        "favourites",
+        "Fawke's",
+        "Fellfoot",
+        "Fiennes",
+        "Foxand",
+        "Frankopan's",
+        "Frontinus",
+        "frontlegleft",
+        "frontlegright",
+        "Fuga",
+        "Fusedale",
+        "Ganet",
+        "Gawsworth",
+        "Geltsdale",
+        "Gilsland",
+        "gladitorial",
+        "Glenelg",
+        "Gradsheepfur",
+        "Gretna",
+        "Hadrians",
+        "hadrianswall",
+        "Halton",
+        "Haltwhistle",
+        "Hamiltonservices",
+        "Hammonds",
+        "Hardatwork",
+        "Haweswater",
+        "Heaton",
+        "Heavenfield",
+        "Heddon",
+        "Hedley's",
+        "Helton",
+        "Herbgarden",
+        "Herdwick",
+        "Herdwicks",
+        "Hetherington",
+        "Highshield",
+        "Holeslack",
+        "Holmhead",
+        "Hotbank",
+        "Housestead's",
+        "Housesteads",
+        "Howgill",
+        "Howick",
+        "Howtown",
+        "idmarkerswaledale",
+        "imagesresized",
+        "impassablepath",
+        "indexbiobernard",
+        "indexbioelena",
+        "indexbioharry",
+        "indexbiojill",
+        "indexbiolennie",
+        "Inthe",
+        "Ironsign",
+        "Irthing",
+        "Isca",
+        "ituna",
+        "Januaryfigcaption",
+        "Jesmond",
+        "Jolie",
+        "julyfigcaption",
+        "junefigcaption",
+        "Juneh",
+        "Kamla",
+        "Katty",
+        "Keelman",
+        "Keswick",
+        "kilometre",
+        "kilometres",
+        "Kirkbarrow",
+        "Kirkhouse",
+        "Knag",
+        "Knebworth",
+        "Knutsford",
+        "lambbody",
+        "lambearleft",
+        "lambearright",
+        "lambhead",
+        "lambleg",
+        "lambtail",
+        "Landgirl",
+        "Lanercost",
+        "lefteye",
+        "leftfront",
+        "leftrear",
+        "Legio",
+        "legionnary",
+        "Lemington",
+        "Lennie",
+        "Lennieon",
+        "léon",
+        "Lindisfarne",
+        "Lineam",
+        "Loadpot",
+        "localised",
+        "Longdales",
+        "Longhoughton",
+        "Longsdales",
+        "lowerhornleft",
+        "lowerhornright",
+        "Lowther",
+        "Lowther's",
+        "Lyth",
+        "Lyttons",
+        "Macclesfield",
+        "Mælmin",
+        "Magnis",
+        "Malham",
+        "Malmaison",
+        "Manesty",
+        "manoeuvre",
+        "Massam",
+        "materialise",
+        "mayfigcaption",
+        "Melkinthorpe",
+        "memoriam",
+        "michelmas",
+        "Milecastle",
+        "milecastles",
+        "Milfield",
+        "Miltonrigg",
+        "Mithraeum",
+        "Moeraki",
+        "Moerakid",
+        "MOOOVE",
+        "Morecambe",
+        "motorised",
+        "Mucklebank",
+        "Murton",
+        "Naworth",
+        "nepeta",
+        "Newburn",
+        "Newbury",
+        "newsheader",
+        "Newtown",
+        "Norham",
+        "noseleft",
+        "Novemberfigcaption",
+        "Novemberr",
+        "Nuttall",
+        "octoberfigcaption",
+        "Onnum",
+        "organisation",
+        "organisations",
+        "organised",
+        "Oswalds",
+        "Paddington",
+        "paninis",
+        "Patterdale",
+        "Paulinus",
+        "Penarth",
+        "Pencoed",
+        "Pennine",
+        "Penrith",
+        "personalised",
+        "Pfigcaption",
+        "Planetrees",
+        "Poltross",
+        "Pooley",
+        "Portree",
+        "prebooked",
+        "Principalis",
+        "prunus",
+        "pyro",
+        "Quarrybeck",
+        "Quintinshill",
+        "Raedwald",
+        "Ravenglass",
+        "realised",
+        "rearlegleft",
+        "rearlegright",
+        "recognised",
+        "Redheugh",
+        "reedbeds",
+        "reedbridges",
+        "reimagination",
+        "relocatefacialfeaturesswaledale",
+        "relocatesheephornsswaledale",
+        "Repairsite",
+        "Rheged",
+        "Rickerby",
+        "Ridegwood",
+        "Ridgegate",
+        "Ridgewood",
+        "Rigg",
+        "righteye",
+        "rightfront",
+        "rightrear",
+        "RNLI",
+        "Roadstone",
+        "Romaneagle",
+        "Rosegarden",
+        "RSPB",
+        "Rudchester",
+        "saltmarsh",
+        "Scaramucci",
+        "Shap",
+        "sheepearleft",
+        "sheepearright",
+        "Sizergh",
+        "slideshowentry",
+        "slideshowinstructions",
+        "Snape",
+        "Sockbridge",
+        "Solway",
+        "splendour",
+        "Strandshag",
+        "Stranraer",
+        "STUDIOCANAL",
+        "Sustrans",
+        "swaledale",
+        "Swaledales",
+        "Talkin",
+        "Thelwall",
+        "thomasfamilyblog",
+        "Tindale",
+        "Tite",
+        "Tranmer",
+        "Trentabank",
+        "Ullswater",
+        "upperhornleft",
+        "upperhornright",
+        "Uskmouth",
+        "Valli",
+        "Vallum",
+        "Vercovicium",
+        "verticalnose",
+        "vicus",
+        "Viewfrom",
+        "Vindobala",
+        "Vindolanda",
+        "Waggonway",
+        "Wallhouses",
+        "Westfield",
+        "Westgate",
+        "Whinney",
+        "Whitby",
+        "Whitehaven",
+        "Whittledene",
+        "Whitworth",
+        "Wilf",
+        "Willoughby",
+        "Willowford",
+        "xlink",
+        "Yanwath",
+        "Yeavering",
+        "Zedel",
+        "Zédel",
+        "Zurbarán"
     ]
 }
