Debugging and tidying of blog, addition May 28th 2025 blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "cSpell.words": [
+        "Abbotsford",
+        "Abbotsfordfrom",
         "Achan",
         "Aelius",
         "Aesica",
         "Æthelfrith",
         "Aidan",
+        "Ainhoa",
         "Ainstable",
         "Albermale",
         "Alignli",
@@ -13,14 +16,19 @@
         "Alnwick",
         "Ambleside",
         "Amey",
+        "Anatoli",
         "anenomes",
         "Annan",
         "AONB",
+        "Apolinaris",
         "aprilfigcaption",
         "Apsley",
+        "Arbat",
         "Armadale",
         "Armathwaite",
+        "Armonico",
         "Arrol",
+        "Asby",
         "Ashby",
         "Aspley",
         "Asturia",
@@ -34,7 +42,9 @@
         "Bamburgh",
         "Bankshead",
         "Banna",
+        "Bassenthwaite",
         "Bernicia",
+        "Billinge",
         "Birdoswald",
         "Birdowswald",
         "Bleatarn",
@@ -59,12 +69,16 @@
         "Brough",
         "Brudge",
         "Brunton",
+        "brussel",
+        "Buen",
         "Bunniesand",
         "Buon",
         "Burges",
+        "Buttermere",
         "Byker",
         "CADW",
         "Caerlaverlock",
+        "Calixtinus",
         "Camboglanna",
         "Camino",
         "caminodesantiago",
@@ -78,17 +92,25 @@
         "Carvoran",
         "Castell",
         "Castlesteads",
+        "cateyes",
         "catlennie",
         "Catriona",
         "Cawfield",
         "Cawfields",
+        "Cerialis",
+        "Chapelle",
         "charityfundraisingthermometer",
         "Charnock",
+        "Charpenter",
         "Chesters",
         "Chipchase",
         "Chollerford",
+        "civilisations",
         "Clachaig",
+        "Clesketts",
+        "clints",
         "Coch",
+        "Coggabata",
         "Coire",
         "colour",
         "colourful",
@@ -102,8 +124,13 @@
         "Cottaged",
         "Covent",
         "Craghill",
+        "cranesbill",
         "Craster",
+        "Criffel",
+        "Croglin",
+        "Crossgates",
         "Cyclistaugustheader",
+        "DAAD",
         "Dacre",
         "datenews",
         "deepwater",
@@ -112,9 +139,12 @@
         "Deira",
         "Derwenthaugh",
         "Derwentwater",
+        "Discworld",
         "Disneyworld",
         "Divock",
+        "Dodd",
         "Dowbekin's",
+        "Drumburgh",
         "Dufton",
         "Dunstanburgh",
         "Dunston",
@@ -142,6 +172,7 @@
         "favourites",
         "Fawke's",
         "Fellfoot",
+        "fellside",
         "Fiennes",
         "Foxand",
         "Frankopan's",
@@ -150,22 +181,32 @@
         "frontlegright",
         "Fuga",
         "Fusedale",
+        "Gairs",
+        "Galashiels",
         "Ganet",
+        "gaters",
         "Gawsworth",
         "Geltsdale",
         "Gilsland",
         "gladitorial",
+        "Glasson",
         "Glenelg",
         "Gradsheepfur",
+        "Greggs",
         "Gretna",
+        "Griffiths",
+        "grikes",
         "Hadrians",
         "hadrianswall",
+        "Hallbankgate",
         "Halton",
         "Haltwhistle",
         "Hamiltonservices",
         "Hammonds",
         "Hardatwork",
+        "Hartside",
         "Haweswater",
+        "Hawick",
         "Heaton",
         "Heavenfield",
         "Heddon",
@@ -176,14 +217,18 @@
         "Herdwicks",
         "Hetherington",
         "Highshield",
+        "Hinse",
+        "Hinsefeldt",
         "Holeslack",
         "Holmhead",
         "Hotbank",
         "Housestead's",
         "Housesteads",
         "Howgill",
+        "Howgills",
         "Howick",
         "Howtown",
+        "hwpdailytemplate",
         "idmarkerswaledale",
         "imagesresized",
         "impassablepath",
@@ -193,9 +238,11 @@
         "indexbiojill",
         "indexbiolennie",
         "Inthe",
+        "iplayer",
         "Ironsign",
         "Irthing",
         "Isca",
+        "Itouna",
         "ituna",
         "Januaryfigcaption",
         "Jesmond",
@@ -206,22 +253,30 @@
         "Kamla",
         "Katty",
         "Keelman",
+        "Kensington",
         "Keswick",
+        "Kielder",
         "kilometre",
         "kilometres",
         "Kirkbarrow",
         "Kirkhouse",
         "Knag",
         "Knebworth",
+        "Knott",
         "Knutsford",
+        "l’Aubépine",
+        "L'estro",
+        "Laag",
         "lambbody",
         "lambearleft",
         "lambearright",
         "lambhead",
         "lambleg",
         "lambtail",
+        "Lammermoor",
         "Landgirl",
         "Lanercost",
+        "leftcalf",
         "lefteye",
         "leftfront",
         "leftrear",
@@ -231,10 +286,16 @@
         "Lennie",
         "Lennieon",
         "léon",
+        "LGBTQ",
+        "licence",
+        "lickingtonguelennie",
+        "liminality",
         "Lindisfarne",
         "Lineam",
+        "Lingard",
         "Loadpot",
         "localised",
+        "Lockhart",
         "Longdales",
         "Longhoughton",
         "Longsdales",
@@ -242,49 +303,62 @@
         "lowerhornright",
         "Lowther",
         "Lowther's",
+        "Luguvalium",
         "Lyth",
         "Lyttons",
         "Macclesfield",
         "Mælmin",
         "Magnis",
+        "Makerfield",
         "Malham",
+        "Mallerstang",
         "Malmaison",
         "Manesty",
         "manoeuvre",
+        "Marmion",
         "Massam",
         "materialise",
         "mayfigcaption",
         "Melkinthorpe",
         "memoriam",
         "michelmas",
+        "midnightblue",
         "Milecastle",
         "milecastles",
         "Milfield",
         "Miltonrigg",
+        "Mirehouse",
         "Mithraeum",
         "Moeraki",
         "Moerakid",
+        "Monkhill",
         "MOOOVE",
         "Morecambe",
+        "Morland",
         "motorised",
         "Mucklebank",
         "Murton",
         "Naworth",
         "nepeta",
+        "Newbiggin",
         "Newburn",
         "Newbury",
         "newsheader",
         "Newtown",
         "Norham",
+        "Norte",
+        "northermost",
         "noseleft",
         "Novemberfigcaption",
         "Novemberr",
         "Nuttall",
         "octoberfigcaption",
         "Onnum",
+        "optimised",
         "organisation",
         "organisations",
         "organised",
+        "Orton",
         "Oswalds",
         "Paddington",
         "paninis",
@@ -295,19 +369,28 @@
         "Pennine",
         "Penrith",
         "personalised",
+        "Petillius",
         "Pfigcaption",
         "Planetrees",
+        "poire",
         "Poltross",
         "Pooley",
         "Portree",
         "prebooked",
         "Principalis",
+        "problemfeedback",
+        "Proculinus",
+        "Proculus",
         "prunus",
+        "Pubicius",
         "pyro",
         "Quarrybeck",
         "Quintinshill",
+        "Quintus",
         "Raedwald",
+        "randonnée",
         "Ravenglass",
+        "realise",
         "realised",
         "rearlegleft",
         "rearlegright",
@@ -316,6 +399,7 @@
         "reedbeds",
         "reedbridges",
         "reimagination",
+        "Reiver",
         "relocatefacialfeaturesswaledale",
         "relocatesheephornsswaledale",
         "Repairsite",
@@ -334,35 +418,92 @@
         "Rosegarden",
         "RSPB",
         "Rudchester",
+        "Rybakov",
         "saltmarsh",
+        "Sandgate",
+        "Sandhill",
+        "Sant",
         "Scaramucci",
+        "Scotswood",
+        "Scotts",
+        "Scotwood",
+        "seabass",
+        "Segedunum",
+        "Segendum",
+        "Selkirkshire",
+        "Septemberheader",
+        "severl",
+        "Sewingshield",
+        "Sewingshields",
+        "Seyeleftinner",
+        "Seyeleftouter",
+        "Seyerightinner",
+        "Seyerightouter",
         "Shap",
+        "Shead",
+        "sheepear",
         "sheepearleft",
         "sheepearright",
+        "shieling",
+        "Silloth",
         "Sizergh",
+        "Skiddaw",
+        "Sleft",
         "slideshowentry",
         "slideshowinstructions",
+        "Smouth",
+        "Smuzzle",
         "Snape",
+        "Snoseleft",
+        "snowmanshakerdisplay",
         "Sockbridge",
+        "Soll",
         "Solway",
+        "Spedding",
         "splendour",
+        "Sright",
+        "SSSI",
+        "Staith",
+        "Staithes",
+        "staiths",
+        "Stanegate",
+        "Stanwix",
+        "Stellae",
+        "Storys",
         "Strandshag",
         "Stranraer",
+        "stretchlennielegleft",
+        "stretchlennielegright",
         "STUDIOCANAL",
         "Sustrans",
+        "SVGID",
         "swaledale",
         "Swaledales",
         "Talkin",
+        "Tarnmonath",
+        "tarte",
+        "tatin",
+        "Tearoomnamed",
+        "Tebay",
+        "tella",
         "Thelwall",
+        "Thirlwall",
         "thomasfamilyblog",
         "Tindale",
         "Tite",
+        "Tortie",
         "Tranmer",
+        "Treesheddingleaves",
         "Trentabank",
+        "Tullie",
+        "Tungrians",
+        "TWBPT",
         "Ullswater",
+        "Ulpius",
         "upperhornleft",
         "upperhornright",
         "Uskmouth",
+        "Uxelodunum",
         "Valli",
         "Vallum",
         "Vercovicium",
@@ -371,11 +512,15 @@
         "Viewfrom",
         "Vindobala",
         "Vindolanda",
+        "visualising",
         "Waggonway",
         "Wallhouses",
+        "Walltown",
+        "waymarks",
         "Westfield",
         "Westgate",
         "Whinney",
+        "Whinshield",
         "Whitby",
         "Whitehaven",
         "Whittledene",
@@ -383,6 +528,8 @@
         "Wilf",
         "Willoughby",
         "Willowford",
+        "Württemberg",
+        "Wylam",
         "xlink",
         "Yanwath",
         "Yeavering",
