--- a/.hintrc
+++ b/.hintrc
@@ -11,5 +11,13 @@
         ]
       }
     ]
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not ios_saf <= 18.4",
+    "not safari <= 18.4",
+    "not ios_saf <= 18.5",
+    "not safari <= 18.5"
+  ]
 }
