Trial to check git push

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
         "Aureliana",
         "Avanti",
         "backbutton",
+        "backbuttonjune",
         "Bamburgh",
         "Bankshead",
         "Banna",
@@ -95,6 +96,7 @@
         "cateyes",
         "catlennie",
         "Catriona",
+        "catwalkinganimation",
         "Cawfield",
         "Cawfields",
         "Cerialis",
@@ -155,6 +157,7 @@
         "Eastrigg",
         "Edmunds",
         "Eheader",
+        "Einaudi",
         "Elswick",
         "ensuite",
         "Éowyn",
@@ -237,6 +240,7 @@
         "indexbioharry",
         "indexbiojill",
         "indexbiolennie",
+        "Inga",
         "Inthe",
         "iplayer",
         "Ironsign",
@@ -316,6 +320,7 @@
         "Manesty",
         "manoeuvre",
         "Marmion",
+        "Mascarpone",
         "Massam",
         "materialise",
         "mayfigcaption",
@@ -417,6 +422,7 @@
         "Romaneagle",
         "Rosegarden",
         "RSPB",
+        "RSPCA",
         "Rudchester",
         "Rybakov",
         "saltmarsh",
@@ -455,6 +461,7 @@
         "Smuzzle",
         "Snape",
         "Snoseleft",
+        "snowmanshaker",
         "snowmanshakerdisplay",
         "Sockbridge",
         "Soll",
