Addition 25th May 2025 blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,7 @@
         "Chollerford",
         "civilisations",
         "Clachaig",
+        "Cleator",
         "Clesketts",
         "clints",
         "Coch",
@@ -159,6 +160,7 @@
         "Eheader",
         "Einaudi",
         "Elswick",
+        "Ennerdale",
         "ensuite",
         "Éowyn",
         "Errington",
@@ -183,6 +185,7 @@
         "frontlegleft",
         "frontlegright",
         "Fuga",
+        "fulbeck",
         "Fusedale",
         "Gairs",
         "Galashiels",
@@ -302,6 +305,7 @@
         "Lockhart",
         "Longdales",
         "Longhoughton",
+        "Longlands",
         "Longsdales",
         "lowerhornleft",
         "lowerhornright",
@@ -425,6 +429,7 @@
         "RSPCA",
         "Rudchester",
         "Rybakov",
+        "Rydal",
         "saltmarsh",
         "Sandgate",
         "Sandhill",
@@ -445,6 +450,7 @@
         "Seyeleftouter",
         "Seyerightinner",
         "Seyerightouter",
+        "Sfigcaption",
         "Shap",
         "Shead",
         "sheepear",
@@ -507,6 +513,7 @@
         "TWBPT",
         "Ullswater",
         "Ulpius",
+        "Ulverston",
         "upperhornleft",
         "upperhornright",
         "Uskmouth",
