Addition of June blog with cat animation, correction of errors in body element introduced by previous edit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "Billinge",
         "Birdoswald",
         "Birdowswald",
+        "Blackie",
         "Bleatarn",
         "Blencathra",
         "bodycentre",
@@ -435,6 +436,7 @@
         "Sandhill",
         "Sant",
         "Scaramucci",
+        "Scarness",
         "Scotswood",
         "Scotts",
         "Scotwood",
