Addition of 31st May 2025 blog and eidts to June 2025 blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -147,6 +147,7 @@
         "Disneyworld",
         "Divock",
         "Dodd",
+        "Dodds",
         "Dowbekin's",
         "Drumburgh",
         "Dufton",
@@ -167,6 +168,7 @@
         "Errington",
         "Euston",
         "Eveningd",
+        "evernote",
         "eyeleftinner",
         "eyeleftouter",
         "eyerightinner",
