Completion of the 31st May blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "Bankshead",
         "Banna",
         "Bassenthwaite",
+        "Bega's",
         "Bernicia",
         "Billinge",
         "Birdoswald",
@@ -365,6 +366,7 @@
         "Novemberr",
         "Nuttall",
         "octoberfigcaption",
+        "oneplusnord",
         "Onnum",
         "optimised",
         "organisation",
