Addition 7th June 2025 Grasmere blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -311,6 +311,7 @@
         "Longhoughton",
         "Longlands",
         "Longsdales",
+        "Loughrigg",
         "lowerhornleft",
         "lowerhornright",
         "Lowther",
@@ -418,6 +419,7 @@
         "relocatesheephornsswaledale",
         "Repairsite",
         "Rheged",
+        "Rhodedendra",
         "Rickerby",
         "Ridegwood",
         "Ridgegate",
