Conversion of picture gallery to columnar for smaller devices, resizing of cat for devices 1201px and above.
Signed-off-by: Jill Thomas <jillthomas532016@outlook.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -221,6 +221,7 @@
         "Heavenfield",
         "Heddon",
         "Hedley's",
+        "Heidis",
         "Helton",
         "Herbgarden",
         "Herdwick",
@@ -432,6 +433,7 @@
         "Roadstone",
         "Romaneagle",
         "Rosegarden",
+        "Rosthwaite",
         "RSPB",
         "RSPCA",
         "Rudchester",
@@ -480,6 +482,7 @@
         "Sockbridge",
         "Soll",
         "Solway",
+        "soooo",
         "Spedding",
         "splendour",
         "Sright",
