Addition June 14th 2025 blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
         "Asturian",
         "Asturum",
         "aubretia",
+        "Auguste",
         "augustfigcaption",
         "Aureliana",
         "Avanti",
@@ -58,6 +59,7 @@
         "Bonnies",
         "Bonniescafé",
         "Bonniesmenu",
+        "Boppard",
         "Bouch",
         "Bowness",
         "Branson",
@@ -77,6 +79,7 @@
         "Bunniesand",
         "Buon",
         "Burges",
+        "Burrell",
         "Buttermere",
         "Byker",
         "CADW",
@@ -113,6 +116,7 @@
         "Clachaig",
         "Cleator",
         "Clesketts",
+        "Cleves",
         "clints",
         "Coch",
         "Coggabata",
@@ -241,6 +245,7 @@
         "Howtown",
         "hwpdailytemplate",
         "idmarkerswaledale",
+        "Illiamand",
         "imagesresized",
         "impassablepath",
         "indexbiobernard",
@@ -389,6 +394,7 @@
         "Pfigcaption",
         "Planetrees",
         "poire",
+        "Pollok",
         "Poltross",
         "Pooley",
         "Portree",
@@ -429,6 +435,7 @@
         "righteye",
         "rightfront",
         "rightrear",
+        "Rijn",
         "RNLI",
         "Roadstone",
         "Romaneagle",
@@ -443,6 +450,7 @@
         "Sandgate",
         "Sandhill",
         "Sant",
+        "Saskia",
         "Scaramucci",
         "Scarness",
         "Scotswood",
@@ -551,6 +559,7 @@
         "Whittledene",
         "Whitworth",
         "Wilf",
+        "Williamand",
         "Willoughby",
         "Willowford",
         "Württemberg",
