--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "Bamburgh",
         "Bankshead",
         "Banna",
+        "Basden",
         "Bassenthwaite",
         "Bega's",
         "Bernicia",
