--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.5.2",
     "ansi-html": ">=0.0.9",
+    "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.3",
     "glob-parent": ">=6.0.2",
     "immer": ">=10.0.4",
     "loader-utils": ">=3.2.1",
     "minimatch": ">=9.0.3",
     "node-forge": ">=1.3.1",
+    "postcss": "^8.5.6",
     "pug": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +28,7 @@
     "serialize-javascript": ">=6.0.2",
     "shell-quote": ">=1.8.1",
     "styled-components": "^6.1.13",
+    "tailwindcss": "^4.1.12",
     "terser": ">=5.29.2",
     "web-vitals": "^3.5.2",
     "webpack-dev-middleware": "^7.1.1"
